# facial-expression-classification

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
CnnNormalFinalVersion/: cnnhorigin.py
CnnNormalFinalVersion/weight/: resultados.txt
data/: download.sh
notebooks/: train_colab.ipynb
outputs/ViT/: model.pth
outputs/effectivenet/: classification_reports.txt
src/diffusion/: train.py
src/facexpr/: __main__.py
src/facexpr/CnnNormalFinalVersion/weight/: resultados.txt
src/facexpr/cGen+cDis/Version 1.0/: cGen+cGanV10.ipynb
src/facexpr/cGen+cDis/Version 1.0/weight/: generador_final_cgan_human.pth
src/facexpr/cGen+cDis/Version 1.1/: cGen+cGanV11.ipynb
src/facexpr/cGen+cDis/Version 1.1/weight/: generador_final_cgan_human.pth
src/facexpr/cGen+cDis/Version 1.2/: cGen+cGanV12.ipynb
src/facexpr/cGen+cDis/Version 1.3/: cGen+cGanV13.ipynb
src/facexpr/cGen+cDis/Version 1.4/: cGen+cGanV14.ipynb
src/facexpr/cGen+cDis/Version 1.5/: cGen+cGanV15.py
src/facexpr/cGen+cDis/Version 1.6/: cGen+cGanV16.py
src/facexpr/cGen+cDis/Version 1.7Final/: cGen+cGanV17Final.py
src/facexpr/cGen+cDis/Version 1.7Final/weight/: disc_ep130.pth  disc_ep140.pth  disc_ep150.pth  disc_ep160.pth  disc_ep170.pth  disc_ep180.pth  disc_ep190.pth  disc_ep200.pth  gen_ep130.pth  gen_ep140.pth  gen_ep150.pth  gen_ep160.pth  gen_ep170.pth  gen_ep180.pth  gen_ep190.pth  gen_ep200.pth
src/facexpr/data/: load_data.py  load_data_albumentations.py
src/facexpr/efficientnet/: arcface.py  early_stopping.py  mhsa.py  model.py  model_simple.py  sweep.py  sweep.yaml  test.py  train.py  train_v2.py
src/facexpr/models/: effective_net_v2.py  example.py  resnet.py
src/facexpr/resnet18/: model.py  test.py  train.py
src/facexpr/simple_cnn/: cnn.py  train.py  train_resnet.py
src/facexpr/training/: train.py  train_effectivenetv2.py  train_efficientnetv2.py  train_resnet.py
src/facexpr/utils/: attention.py  early_stopping.py  math_helpers.py  visualization.py
src/facexpr/vision_transformer/: model.py  train.py
src/facexpr/vit/: model.py  train.py
