[project]
name = "facexpr"
version = "0.1.0"
description = "Facial expression classification package"
authors = [
    { name = "Mateusz Garncarczyk, Jose Javier Garcia Torrejon, Dawid Pawliczek" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
    "numpy (>=2.1.0,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.23.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "wandb (>=0.20.1,<0.21.0)",
    "lion-pytorch (>=0.2.3,<0.3.0)",
]

[tool.poetry]
packages = [{ include = "facexpr", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
facexpr-demo = "facexpr.utils.math_helpers:main"
